Added classes to help with styling Added more styling classes in styles.css

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,4 @@
 
-body
-{
-  background-color: bisque;
-}
 
 .visuallyhidden {
   position: absolute;
@@ -10,4 +6,31 @@ body
   clip: rect(0 0 0 0);
   height: 1px; width: 1px;
   margin: -1px; padding: 0; border: 0;
+}
+
+.add-task__actions {
+  margin: 0;
+}
+
+.button{
+  border: 1px solid #3b7dd4;
+  color: #3b7dd4;
+}
+
+.add-task__input-field{
+  height: 36px;
+  margin: 6px 0;
+}
+
+.add-task__complete{
+  text-decoration: line-through;
+}
+
+/* Tasks */
+.task__text {
+  margin-bottom: 0;
+}
+
+.task {
+  margin-bottom: 16px;
 }
